test/error/parser_files/semi_err06.err
File "parser_files/semi_err06.st", line 1, characters 17-18:
1 | f := int -> int : t.
                    ^
Error: Syntax error.
Hint: Cannot have ':' after "int".
